--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node --watch db.json"
+    "start": "json-server --watch db.json --host 0.0.0.0 --port $PORT"
   },
   "engines": {
     "node": ">=16.0.0"
